Fix get incidents endpoint
